--- a/src/components/om_mig/_ommig.scss
+++ b/src/components/om_mig/_ommig.scss
@@ -14,7 +14,7 @@
             vertical-align: middle;
             margin: 0;
             padding: 0.5rem;
-            height: 80vw;
+            height: 25rem;
             background-color: $blue;
         }
         .item3 {
@@ -23,7 +23,7 @@
         
             img {
                 width: 100%;
-                height: 60vw;
+                height: 15rem;
                 object-fit: cover;
                 opacity: 0.75;
             }
@@ -37,7 +37,7 @@
             align-items: center;
             margin: 0;
             padding: 0.5rem;
-            height: 100vw;
+            height: 25rem;
             background-color: $gray;
         }
     }
