--- a/src/components/varfor_refine/_varforrefine.scss
+++ b/src/components/varfor_refine/_varforrefine.scss
@@ -14,7 +14,7 @@
             vertical-align: middle;
             margin: 0;
             padding: 0.5rem;
-            height: 100vw;
+            height: 25rem;
             background-color: $darkbeige;
         }
         .item2 {
@@ -26,7 +26,7 @@
             align-items: center;
             margin: 0;
             padding: 0.5rem;
-            height: 100vw;
+            height: 25rem;
             background-color: $lightbeige;
         }
         .item3 {
@@ -36,7 +36,7 @@
             img {
                 opacity: 0.75;
                 width: 100%;
-                height: 60vw;
+                height: 15rem;
                 object-fit: cover;
             }
         }
