--- a/src/components/blogg/_blogg.scss
+++ b/src/components/blogg/_blogg.scss
@@ -4,47 +4,26 @@
     display: grid;
     grid-template-columns: repeat(8, 12.5%);
 
-    .item1 {
+    #item1 {
         grid-area: 2 / 1 / span 1 / span 8;
-        display: flex;
-        flex-direction: column;
-        flex-wrap: nowrap;
-        justify-content: center;
-        align-items: center;
-        margin: 0;
-        padding: 0.5rem;
-        height: 20rem;
         background-color: $gray;
         
     }
-    .item2 {
+    #item2 {
         grid-area: 3 / 1 / span 1 / span 8;
         margin: 0 0 -0.25rem 0;
-
-        img{
-            height: 20rem;
-            width: 100%;
-            object-fit: cover;
-            opacity: 0.75;
-        }
     }
 }
 @media (min-width: 770px) {
     .blogg {
-        .item1 {
+        #item1 {
             grid-area: 1 / 1 / span 1 / span 4;
             margin: 1rem 0;
             padding: 2rem;
-            height: 20rem;
         }
-        .item2 {
+        #item2 {
             grid-area: 1 / 5 / span 1 / span 4;
             margin: 1rem 0;
-
-            img {
-                height: 20rem;
-                
-            }
         }
     }
 }
