--- a/src/components/hem/_hem.scss
+++ b/src/components/hem/_hem.scss
@@ -5,121 +5,72 @@
         display: grid;
         grid-template-columns: repeat(8, 12.5%);
 
-        .item1 {
+        #item0 {
             grid-area: 1 / 1 / span 1 / span 8;
-            margin: 0 0 -0.25rem 0;
-
-            img {
-                width: 100%;
-                height: 20rem;
-                object-fit: cover;
-                opacity: 0.7;
-            }
-        }
-        .item2 {
-            grid-area: 2 / 1 / span 1 / span 8;
-            display: flex;
-            flex-direction: column;
-            flex-wrap: nowrap;
-            justify-content: center;
-            align-items: center;
-            margin: 0;
-            background-color: $gray;
-            padding: 0.5rem;
-            height: 20rem;
-        }
-        .item3 {
-            grid-area: 4 / 1 / span 1 / span 8;
-            display: flex;
-            flex-direction: column;
-            flex-wrap: nowrap;
-            justify-content: center;
-            align-items: center;
-            margin: 0;
-            background-color: $blue;
-            height: 20rem;
-            padding: 0.5rem;
-        }
-        .item4 {
-            grid-area: 3 / 1 / span 1 / span 8;
-            margin: 0;
-            background-color: $beige;
-
-            img {
-                width: 100%;
-                height: 20rem;
-                object-fit: cover;
-                opacity: 0.7;
-            }
-        }
-        .item5 {
-            grid-area: 5 / 1 / span 1 / span 8;
-            margin: 0;
-            background-color: $beige;
-            display: flex;
-            justify-content: center;
-            height: 20rem;
-
-            img {
-                height: 100%;
-                object-fit: cover;
-            }
-        }
-        .item6 {
-            grid-area: 6 / 1 / span 1 / span 8;
-            display: flex;
-            flex-direction: column;
-            flex-wrap: nowrap;
-            justify-content: center;
-            align-items: center;
-            margin: 0;
             background-color: $green;
-            height: 20rem;
-            padding: 0.5rem;
+        }
+
+        #item1 {
+            grid-area: 2 / 1 / span 1 / span 8;
+            margin: 0 0 -0.25rem 0;
+        }
+        #item2 {
+            grid-area: 3 / 1 / span 1 / span 8;
+            background-color: $gray;
+        }
+        #item3 {
+            grid-area: 5 / 1 / span 1 / span 8;
+            background-color: $blue;
+        }
+        #item4 {
+            grid-area: 4 / 1 / span 1 / span 8;
+            background-color: $beige;
+        }
+        #item5 {
+            grid-area: 6 / 1 / span 1 / span 8;
+            background-color: $beige;
+        }
+        #item6 {
+            grid-area: 7 / 1 / span 1 / span 8;
+            background-color: $green;
         }
     }
 }
 @media (min-width: 770px) {
     .hem {
         .grid {
-            .item1 {
-                grid-area: 1 / 1 / span 1 / span 4;
-                margin: 0 0 1rem 0;
-
-                img {
-                    height: 20rem;
-                }
+            #item0 {
+                justify-content: left;
+                margin: 0 0 2rem 0;
+                padding: 2rem 4rem;
+                height: 12rem;
             }
-            .item2 {
-                grid-area: 1 / 5 / span 1 / span 4;
-                margin: 0 0 1rem 0;
-                padding: 2rem;
-                height: 20rem;
-            }
-            .item3 {
+            #item1 {
                 grid-area: 2 / 1 / span 1 / span 4;
-                margin: 1rem 0;
-                padding: 2rem;
-                height: 20rem;
+                margin: 0 0 1rem 0;
             }
-            .item4 {
+            #item2 {
                 grid-area: 2 / 5 / span 1 / span 4;
-                margin: 1rem 0;
-
-                img {
-                    height: 20rem;
-                }
+                margin: 0 0 1rem 0;
+                padding: 2rem;
             }
-            .item5 {
+            #item3 {
                 grid-area: 3 / 1 / span 1 / span 4;
                 margin: 1rem 0;
-                height: 20rem;
+                padding: 2rem;
             }
-            .item6 {
+            #item4 {
                 grid-area: 3 / 5 / span 1 / span 4;
+                margin: 1rem 0;
+            }
+            #item5 {
+                grid-area: 4 / 1 / span 1 / span 4;
+                margin: 1rem 0;
+            }
+            #item6 {
+                grid-area: 4 / 5 / span 1 / span 4;
                 margin: 1rem 0 2rem 0;
                 padding: 2rem;
-                height: 20rem;
             }
         }
     }
