--- a/src/components/kontakt/_kontakt.scss
+++ b/src/components/kontakt/_kontakt.scss
@@ -2,9 +2,10 @@
 
 .kontakt {
     display: grid;
-    grid-template-columns: repeat(8, 12.5%);
+    grid-template-columns: repeat(10, 10%);
     background-color: $blue;
-    padding: 3rem 1rem;
+    padding: 4rem 1rem;
+    margin: 0;
 
     .grid {
         display: grid;
@@ -13,8 +14,12 @@
         margin: 1rem;
         border-radius: 0.2rem;
         background-color: #535561;
-        grid-area: 1 / 1 / span 8 / span 8;
+        grid-area: 1 / 1 / span 8 / span 10;
         color: $white;
+
+        h3 {
+            margin: 0 0 1rem 0;
+        }
 
         #item1 {
             grid-area: 1 / 1 / span 1 / span 8;
@@ -50,11 +55,24 @@
             border-radius: 0.2rem;
             border: none;
             background-color: $darkgray;
-            font-size: 1.2rem;
-            font-weight: 400;
+
+            h3 {
+                text-align: center;
+                margin: 0;
+            }
         }
     }
 }
+@media (min-width: 600px) {
+    .kontakt {
+        padding: 2rem;
+
+        .grid {
+            margin: 11.5rem 6rem;
+        }
+    }
+}
+
 @media (min-width: 770px) {
     .kontakt {
         padding: 1rem;
@@ -62,7 +80,7 @@
         .grid {
             padding: 2rem 3rem;
             margin: 2rem 0;
-            grid-area: 1 / 3 / span 7 / span 4;
+            grid-area: 1 / 4 / span 7 / span 4;
 
             #item1 {
                 grid-area: 1 / 1 / span 1 / span 8;
@@ -71,7 +89,6 @@
             #item2 {
                 grid-area: 2 / 1 / span 1 / span 1;
                 margin: 0.3rem 0;
-                text-align: left;
             }
             #item3 {
                 grid-area: 3 / 1 / span 1 / span 8;
@@ -80,7 +97,6 @@
             #item4 {
                 grid-area: 4 / 1 / span 1 / span 1;
                 margin: 0.3rem 0;
-                text-align: left;
             }
             #item5 {
                 grid-area: 5 / 1 / span 1 / span 8;
@@ -89,17 +105,14 @@
             #item6 {
                 grid-area: 6 / 1 / span 1 / span 1;
                 margin: 0.3rem 0;
-                text-align: left;
             }
             #item7 {
                 grid-area: 7 / 1 / span 1 / span 8;
             }
             #item8 {
                 grid-area: 8 / 1 / span 1 / span 8;
-                margin: 2rem 0 0.3rem 0;
-                padding: 0.8rem 0;
-                border-radius: 0.2rem;
-                border: none;
+                margin: 1.7rem 0 0.3rem 0;
+                padding: 0.5rem 0;
             }
         }
     }
