--- a/src/components/om_mig/_ommig.scss
+++ b/src/components/om_mig/_ommig.scss
@@ -5,39 +5,16 @@
         display: grid;
         grid-template-columns: repeat(8, 12.5%);
 
-        .item1 {
+        #item1 {
             grid-area: 1 / 1 / span 1 / span 8;
-            display: flex;
-            flex-direction: column;
-            flex-wrap: nowrap;
-            justify-content: left;
-            vertical-align: middle;
-            margin: 0;
-            padding: 0.5rem;
-            height: 25rem;
             background-color: $blue;
         }
-        .item3 {
+        #item2 {
             grid-area: 2 / 1 / span 1 / span 8;
             margin: 0 0 -0.25rem 0;
-        
-            img {
-                width: 100%;
-                height: 15rem;
-                object-fit: cover;
-                opacity: 0.75;
-            }
         }
-        .item4 {
+        #item3 {
             grid-area: 3 / 1 / span 1 / span 8;
-            display: flex;
-            flex-direction: column;
-            flex-wrap: nowrap;
-            justify-content: center;
-            align-items: center;
-            margin: 0;
-            padding: 0.5rem;
-            height: 25rem;
             background-color: $gray;
         }
     }
@@ -45,24 +22,20 @@
 @media (min-width: 770px) {
     .om_mig {
         .grid {
-            .item1 {
+            #item1 {
                 margin: 1rem 0 2rem 0;
                 padding: 2rem 4rem;
                 height: 15rem;
+                justify-content: left;
             }
-            .item3 {
+            #item2 {
                 grid-area: 2 / 1 / span 1 / span 4;
                 margin: 0 0 1rem 0;
-
-                img {
-                    height: 20rem;
-                }
             }
-            .item4 {
+            #item3 {
                 grid-area: 2 / 5 / span 1 / span 4;
                 margin: 0 0 1rem 0;
                 padding: 1.5rem;
-                height: 20rem;
             }
         }
     }
