--- a/src/components/varfor_refine/_varforrefine.scss
+++ b/src/components/varfor_refine/_varforrefine.scss
@@ -5,64 +5,37 @@
         display: grid;
         grid-template-columns: repeat(8, 12.5%);
 
-        .item1 {
+        #item1 {
             grid-area: 1 / 1 / span 1 / span 8;
-            display: flex;
-            flex-direction: column;
-            flex-wrap: nowrap;
-            justify-content: left;
-            vertical-align: middle;
-            margin: 0;
-            padding: 0.5rem;
-            height: 25rem;
             background-color: $darkbeige;
         }
-        .item2 {
+        #item2 {
             grid-area: 2 / 1 / span 1 / span 8;
-            display: flex;
-            flex-direction: column;
-            flex-wrap: nowrap;
-            justify-content: center;
-            align-items: center;
-            margin: 0;
-            padding: 0.5rem;
-            height: 25rem;
             background-color: $lightbeige;
         }
-        .item3 {
+        #item3 {
             grid-area: 3 / 1 / span 1 / span 8;
             margin: 0 0 -0.25rem 0;
-        
-            img {
-                opacity: 0.75;
-                width: 100%;
-                height: 15rem;
-                object-fit: cover;
-            }
         }
     }
 }
 @media (min-width: 770px) {
     .varfor_refine {
         .grid { 
-            .item1 {
+            #item1 {
+                justify-content: left;
                 margin: 1rem 0 2rem 0;
                 padding: 2rem 4rem;
                 height: 15rem;
             }
-            .item2 {
+            #item2 {
                 grid-area: 2 / 1 / span 1 / span 4;
                 margin: 0 0 1rem 0;
                 padding: 1.5rem;
-                height: 20rem;
             }
-            .item3 {
+            #item3 {
                 grid-area: 2 / 5 / span 1 / span 4;
                 margin: 0 0 1rem 0;
-
-                img {
-                    height: 20rem;
-                }
             }
         }
     }
