--- a/src/scss/_components.scss
+++ b/src/scss/_components.scss
@@ -1,21 +1,77 @@
 @import 'variables';
 .btn {
     background-color: $darkbeige;
-    padding: 0.8rem 2rem;
-    margin: 0.5rem 0;
+    padding: 0.5rem 0;
+    margin: 0.6;
     border-radius: 0.2rem;
 }
 .input1 {
     background-color: $white;
-    padding: 0.8rem 2rem;
-    margin: 0.5rem 0;
+    padding: 0.7rem 0;
+    margin: 0.6;
     border-radius: 0.2rem;
     border: none;
 }
 .input2 {
     background-color: $white;
-    padding: 1rem;
-    margin: 0.5rem 0;
+    padding: 0.8rem;
+    margin: 0.6;
     border-radius: 0.2rem;
     border: none;
+}
+.label {
+    p {
+        margin: 0.2rem 0;
+    }
+}
+.card1 {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    justify-content: center;
+    vertical-align: middle;
+    margin: 0;
+    padding: 0.5rem;
+    height: 20rem;
+}
+.card2 {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    justify-content: center;
+    align-items: center;
+    margin: 0;
+    padding: 0.5rem;
+    height: 20rem;
+}
+.picture1 {
+    margin: 0;
+    background-color: $beige;
+    height: 20rem;
+
+    img {
+        height: 20rem;
+        width: 100%;
+        object-fit: cover;
+        opacity: 0.7;
+    }
+}
+.picture2 {
+    display: flex;
+    justify-content: center;
+    height: 20rem;
+    margin: 0;
+
+    img {
+        height: 100%;
+        object-fit: cover;
+    }
+}
+.picture3 {
+    img {
+        height: 20rem;
+        width: 100%;
+        object-fit: cover;
+        opacity: 0.7;
+    }
 }
