--- a/src/scss/_typography.scss
+++ b/src/scss/_typography.scss
@@ -21,16 +21,16 @@ ul{
 }
 
 h1 {
-    font-size: 2.8rem;
+    font-size: 1.7rem;
     text-decoration: none;
     text-align: center;
-    margin: 1rem 0.5rem;
+    margin: 0.5rem;
     padding: 0;
     font-family: $font-family-h;
 }
 
 h2 {
-    font-size: 1.5rem;
+    font-size: 1.3rem;
     text-decoration: none;
     text-align: center;
     margin: 0.5rem;
@@ -39,19 +39,18 @@ h2 {
     
 }
 h3 {
-    font-size: 1.5rem;
+    font-size: 1.4rem;
     text-transform: uppercase;
     text-align: center;
-    color: $white;
-    margin: 0;
-    padding: 1.5rem;
+    margin: 0.5rem;
+    padding: 0;
     font-family: $font-family-h;
 }
 
 h4 {
-    font-size: 0.8rem;
+    font-size: 1.2rem;
     text-align: center;
-    margin: 0;
+    margin: 0.5rem;
     padding: 0;
     font-family: $font-family-h;
 }
@@ -60,67 +59,71 @@ h5 {
     font-size: 1rem;
     font-weight: 400;
     text-align: center;
-    margin: 0;
+    font-style: italic;
+    margin: 0.5rem;
     padding: 0;
     font-family: $font-family-h;
 }
 
 p {
-    font-size: 1rem;
+    font-size: 0.9rem;
     text-align: center;
     font-family: $font-family-p;
     margin: 0.5rem;
+    padding: 0;
 }
 
 @media only screen and (min-width: 600px) {
     /* for tablets */
     
 h1 {
-    font-size: 4rem;
+    font-size: 1.8rem;
+    text-align: center;
 }
 
 h2 {
-    font-size: 1.3rem;
+    font-size: 1.4rem;
+    text-align: center;
    
 }
 
 h3 {
-    font-size: 2.5rem;
-    
+    font-size: 1.5rem;
+    text-align: center;
 }
 
 h4 {
-    font-size: 0.7rem;
-    
+    font-size: 1.1rem;
+    text-align: center;
 }
 
 h5 {
-    font-size: 1rem;
-    
+    font-size: 0.9rem;
+    text-align: center;
 }
 p {
-    font-size: 1rem; 
-    
+    font-size: 1.1rem; 
+    text-align: center;
 }
   
 }
 
 
-@media only screen and (min-width: 768px) {
+@media only screen and (min-width: 770px) {
     /* For desktop: */
 
     h1 {
-        font-size: 2rem;
+        font-size: 1.6rem;
         text-align: left;
     }
     
     h2 {
-        font-size: 1.5rem;
+        font-size: 1.3rem;
         text-align: left;
     }
     
     h3 {
-        font-size: 1.5rem;
+        font-size: 1.2rem;
         text-align: left;
     }
     
@@ -130,11 +133,11 @@ p {
     }
     
     h5 {
-        font-size: 1.25rem;
+        font-size: 0.8rem;
         text-align: left;
     }
     p {
-        font-size: 0.9rem; 
+        font-size: 1rem; 
         text-align: left;
     }
 
